# eye-in-hand-calibration-aurora

./: .gitignore  Dockerfile  README.md  entrypoint.sh
data/results/: collected_samples.yaml  collected_samples_250_kalman_filter.yaml  collected_samples_250_lowpass_filter.yaml  collected_samples_250_no_filter.yaml  collected_samples_400_debug.yaml  collected_samples_500_lowpass.yaml  collected_samples_500_no_filter.yaml  collected_samples_750_merged.yaml  hand_eye_calibration.yaml  handeye_result.txt  handeye_result_kalman.txt  handeye_result_lowpass.txt  handeye_result_no_filter.txt  selected_pose_pairs.yaml  selected_pose_pairs_20251103_184708.yaml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
hardware/cad/: aurora_case.scad  case_connector_arm.scad  checkerboard_case.scad
hardware/chessboards/measured_points/: chess_10x8_3mm.yaml  chess_10x8_3mm_inter.yaml  chess_11x9_3mm_inter.yaml  chess_11x9_5mm_inter.yaml  chess_11x9_7mm_inter.yaml  chess_11x9_9mm_inter.yaml  chess_9x7_3mm_inter.yaml  chess_9x7_5mm_inter.yaml  chess_9x7_7mm_inter.yaml  chess_9x7_9mm_inter.yaml
hardware/stl/: aurora_case.stl  case_connector_arm.stl  checkerboard_case.stl
resources/: visualize_eye_in_hand.py
resources/calibration/: camera_calibration_fisheye_1080p.yaml  camera_calibration_fisheye_480p.yaml  camera_params_1080p.yaml  camera_params_480p.yaml
resources/calibration/stats/: calibration_stats_fisheye_1080p.yaml  calibration_stats_fisheye_480p.yaml
resources/eye_in_hand_calibration/: CMakeLists.txt  package.xml
resources/eye_in_hand_calibration/config/: params.yaml
resources/eye_in_hand_calibration/include/eye_in_hand_calibration/: aurora_synchronizer.hpp  calibration_config.hpp  calibration_solver.hpp  chessboard_detector.hpp  hand_eye_calibrator.hpp  pose_estimator.hpp  sample_manager.hpp
resources/eye_in_hand_calibration/launch/: eye_in_hand_calibration.launch.py
resources/eye_in_hand_calibration/nodes/: hand_eye_calibrator_node.cpp
resources/eye_in_hand_calibration/src/: aurora_synchronizer.cpp  calibration_solver.cpp  chessboard_detector.cpp  hand_eye_calibrator.cpp  pose_estimator.cpp  sample_manager.cpp
resources/hand_eye_calibration/: CMakeLists.txt  package.xml
resources/hand_eye_calibration/config/: hand_eye_calibrator.yaml
resources/hand_eye_calibration/include/hand_eye_calibration/: aurora_synchronizer.hpp  calibration_config.hpp  calibration_solver.hpp  chessboard_detector.hpp  hand_eye_calibrator.hpp  pose_estimator.hpp  sample_manager.hpp
resources/hand_eye_calibration/launch/: hand_eye_calibration.launch.py
resources/hand_eye_calibration/nodes/: hand_eye_calibrator_node.cpp
resources/hand_eye_calibration/src/: aurora_synchronizer.cpp  calibration_solver.cpp  chessboard_detector.cpp  hand_eye_calibrator.cpp  pose_estimator.cpp  sample_manager.cpp
scripts/: eyehand_from_yaml.py  handeye_from_yaml.py  merge_yaml_samples.py
