<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eye_in_hand_calibration</name>
  <version>1.0.0</version>
  <description>
    Online eye-in-hand calibration for endoscope with electromagnetic tracker.
    Performs chessboard detection, pose estimation, and AX=XB calibration.
  </description>
  
  <maintainer email="edoardo1.guida@mail.polimi.it">Guida Edoardo</maintainer>
  
  <license>MIT</license>
  
  <author email="edoardo1.guida@mail.polimi.it">Guida Edoardo</author>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 Core dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Custom message package -->
  <depend>aurora_ndi_ros2_driver</depend>

  <!-- System dependencies -->
  <depend>libopencv-dev</depend>
  <depend>libeigen3-dev</depend>
  <depend>libyaml-cpp-dev</depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>